Corrected LinkedIn logo in socials & fix attempt for social sharing buttons on mobile.

--- a/styles.css
+++ b/styles.css
@@ -47,21 +47,21 @@ body {
 
 .shares-list__item {
   flex: 1;
-  margin-right: 0.5em;
+  /*margin-right: 0.1em;*/
   /* Adjust spacing between buttons */
 }
 
 .shares-list-item {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  /*align-items: center;*/
+  justify-content: left;
 }
 
 .shares-list-item svg {
   width: 2.5em;
   /* Adjust icon size */
   height: 2.5em;
-  margin-right: 1em;
+  /*margin-right: 1em;*/
   /* Adjust spacing between icon and text */
 }
 
@@ -111,7 +111,7 @@ p {
   display: inline-block;
 }
 
-.links-list img {
+.links-list img, svg {
   vertical-align: middle;
   /* Align the logos vertically with the text */
   margin-right: 10px;
